test
In file included from ./src/head.h:18:0,
                 from ./src/main.c:5:
./src/U_18.c:8:0: warning: "SUCCESS" redefined
 #define SUCCESS 2
 
In file included from ./src/head.h:2:0,
                 from ./src/main.c:5:
./src/U_02.c:5:0: note: this is the location of the previous definition
 #define SUCCESS 6
 
In file included from ./src/head.h:18:0,
                 from ./src/main.c:5:
./src/U_18.c:42:7: error: redefinition of 'DeleteSpace'
 char *DeleteSpace(char s[])
       ^~~~~~~~~~~
In file included from ./src/head.h:2:0,
                 from ./src/main.c:5:
./src/U_02.c:48:7: note: previous definition of 'DeleteSpace' was here
 char *DeleteSpace(char s[])
       ^~~~~~~~~~~
In file included from ./src/head.h:45:0,
                 from ./src/main.c:5:
./src/U_45.c:53:7: error: redefinition of 'DeleteSpace'
 char *DeleteSpace(char s[])
       ^~~~~~~~~~~
In file included from ./src/head.h:2:0,
                 from ./src/main.c:5:
./src/U_02.c:48:7: note: previous definition of 'DeleteSpace' was here
 char *DeleteSpace(char s[])
       ^~~~~~~~~~~
In file included from ./src/head.h:46:0,
                 from ./src/main.c:5:
./src/U_46.c:29:7: error: redefinition of 'DeleteSpace'
 char *DeleteSpace(char s[])
       ^~~~~~~~~~~
In file included from ./src/head.h:2:0,
                 from ./src/main.c:5:
./src/U_02.c:48:7: note: previous definition of 'DeleteSpace' was here
 char *DeleteSpace(char s[])
       ^~~~~~~~~~~
In file included from ./src/head.h:58:0,
                 from ./src/main.c:5:
./src/U_58.c: In function 'U_58':
./src/U_58.c:24:7: warning: implicit declaration of function 'homeDir' [-Wimplicit-function-declaration]
   if( homeDir( buff, i )==0) {
       ^~~~~~~
In file included from ./src/head.h:59:0,
                 from ./src/main.c:5:
./src/U_59.c: At top level:
./src/U_59.c:38:5: error: redefinition of 'homeDir'
 int homeDir(char s[], int index)
     ^~~~~~~
In file included from ./src/head.h:58:0,
                 from ./src/main.c:5:
./src/U_58.c:39:5: note: previous definition of 'homeDir' was here
 int homeDir(char s[], int index)
     ^~~~~~~
